Добавил новые свойства в application.property

--- a/cardatabase/src/main/resources/application.properties
+++ b/cardatabase/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-spring.application.name=cardatabase
-logging.level.root=DEBUG
- server.port=8081
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
