--- a/cardatabase/src/main/resources/application.properties
+++ b/cardatabase/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
