--- a/cardatabase/src/main/resources/application.properties
+++ b/cardatabase/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
  spring.data.rest.basePath=/api
