--- a/cardatabase/pom.xml
+++ b/cardatabase/pom.xml
@@ -83,7 +83,7 @@
 			<version>0.11.2</version>
 			<scope>runtime</scope>
 		</dependency>
-		 <dependency>
+	<dependency>
   			<groupId>com.h2database</groupId>
   			<artifactId>h2</artifactId>
   			<scope>test</scope>
@@ -95,6 +95,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				 <configuration>
+        			<executable>true</executable>
+   				 </configuration>
 			</plugin>
 		</plugins>
 	</build>
