--- a/cardatabase/src/main/resources/application.properties
+++ b/cardatabase/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
+spring.datasource.url=jdbc:mariadb://cardb:3306/cardb
 spring.datasource.username=root
 spring.datasource.password=karbit
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -8,3 +8,4 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
  spring.data.rest.basePath=/api
+ 
