пробуем переход на postgres

--- a/cardatabase/src/main/resources/application.properties
+++ b/cardatabase/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.datasource.url=jdbc:mariadb://cardb:3306/cardb
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/cardb
+spring.datasource.username=postgres
 spring.datasource.password=karbit
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
- spring.data.rest.basePath=/api
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
  
