--- a/cardatabase/pom.xml
+++ b/cardatabase/pom.xml
@@ -58,8 +58,8 @@
   			<artifactId>spring-boot-starter-data-rest</artifactId>
  		</dependency>
 		<dependency>
-   			 <groupId>org.mariadb.jdbc</groupId>
-   			 <artifactId>mariadb-java-client</artifactId>
+   			 <groupId>org.postgresql</groupId>
+   			 <artifactId>postgresql</artifactId>
  		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
