--- a/cardatabase/src/main/resources/application.properties
+++ b/cardatabase/src/main/resources/application.properties
@@ -1,17 +1,10 @@
-# PostgreSQL настройки
 spring.datasource.url=jdbc:postgresql://localhost:5432/cardb
 spring.datasource.username=postgres
 spring.datasource.password=karbit
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Hibernate/JPA настройки
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-
-# Отключаем предупреждение о user
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
- 
+
+ spring.data.rest.basePath=/api
